--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "install": "npm install --legacy-peer-deps"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -19,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.8.1",
-    "react-tilt": "^0.1.4",
+    "react-tilt": "^1.0.2",
     "react-toastify": "^9.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.149.0"
